<resources>
    <string name="app_name">Pliary</string>

    <string name="notification_channel_id">"notification_channel_id"</string>
    <string name="notification_channel_name">"notification_channel_name"</string>

    <string name="admob_app_id">ca-app-pub-6775338233067833~7324174256</string>
    <string name="admob_reward_id">ca-app-pub-6775338233067833/3467161042</string>
    <string name="admob_test_id">ca-app-pub-3940256099942544/5224354917</string>

    <string name="pliary_subtitle">내 손안에 작은 정원</string>

    <string name="edit_email">Email</string>
    <string name="edit_password">Password</string>
    <string name="cancel">취소</string>

    <!--android:transitionName-->
    <string name="trans_card_detail">trans_card_detail</string>
    <string name="trans_detail">trans_detail</string>

    <!--permission message-->
    <string name="permission_rational">[설정] > [권한] 에서 권한을 허용할 수 있습니다.</string>
    <string name="permission_denied">사진 및 파일을 저장하기 위하여 접근 권한이 필요합니다.</string>

    <!--login-->
    <string name="login_google">구글 계정으로 시작하기</string>
    <string name="login_email">이메일로 시작하기</string>
    <string name="login_guest">게스트로 시작하기</string>

    <!--home-->
    <string name="home_wateringFormat" formatted="false">"%s에게 물주기"</string>
    <string name="home_add_plant">Add plant</string>
    <string name="home_add_plant_msg">식물을 추가해주세요.</string>
    <string name="home_plant_count_over">"식물 카드는 5개까지 생성 가능합니다."</string>
    <string name="home_add_plant_ads_msg">광고 시청하고\n무료로 식물 추가하기</string>
    <string name="home_ads_not_ready">아직 광고가 준비되지 않았어요.</string>

    <string name="home_watering_dlg_title">화분 흙의 습도를 확인해주세요.</string>
    <string name="home_watering_dlg_msg">"손가락으로 화분의 흙을 눌러보고\n건조하다면 물을 주세요."</string>
    <string name="home_watering_dlg_delay">미루기</string>
    <string name="home_watering_dlg_watering">물주기</string>
    <string name="home_watering_dlg_delay_title">미룰 날짜를 입력해주세요.</string>
    <string name="home_watering_dlg_delay_after">일 후 물주기</string>
    <string name="home_watering_dlg_delay_done">완료</string>

    <!--add-->
    <string name="add_title">식물 등록</string>
    <string name="add_select_species">식물 종류</string>
    <string name="add_select_hint">Pick your plants.</string>
    <string name="add_eng_name">영어명</string>
    <string name="add_eng_name_default">My Plant</string>
    <string name="add_eng_name_info">영어 최대 15글자 입력 가능합니다.</string>
    <string name="add_kr_name">한글명 (선택)</string>
    <string name="add_kr_name_info">한글 최대 10글자 입력 가능합니다.</string>
    <string name="add_ref">참고사항</string>

    <string name="add_nickname_title">식물 애칭</string>
    <string name="add_nickname_ps">애칭은 영어, 한글 최대 5글자까지 가능합니다.</string>
    <string name="add_take_date">식물 입양한 날</string>
    <string name="add_last_water_date">마지막으로 물준 날</string>
    <string name="add_everyday_setting">물주기 설정</string>
    <string name="add_every_day">일 마다</string>
    <string name="add_done">완료</string>
    <string name="add_complete">식물이 성공적으로 등록되었습니다.</string>

    <!--식물 종류-->


    <!--detail-->
    <string name="tab_diary">Diary</string>
    <string name="tab_calendar">Calendar</string>
    <string name="delete_message">식물을 삭제하시겠습니까?</string>
    <string name="delete">삭제</string>
    <!--detail modify-->
    <string name="modify_title">식물 수정</string>
    <string name="modify_complete">식물이 성공적으로 수정되었습니다.</string>
    <!--diary-->
    <string name="diary_date_count">"%d일"</string>
    <string name="diary_date_count_message">"%s 식물이랑 %d일을 함께했어요!"</string>
    <string name="diary_empty">성장을 기록하세요.</string>
    <string name="diary_delete_message">일기를 삭제하시겠습니까?</string>
    <string name="calendar_watered">물 준 날</string>
    <string name="calendar_watering">물 주는 날</string>
    <string name="calendar_watered_message">물을 주었습니다.</string>

    <!--diary add-->
    <string name="diary_contents_hint">오늘 식물과의 하루는 즐거웠나요?</string>

    <!--notification-->
    <string name="noti_title">"식물 물주기 알람"</string>
    <string name="noti_message" formatted="false">"%s에게 물 주는 날!"</string>
</resources>
