<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
        <variable
            name="vm"
            type="com.nexters.android.pliary.view.detail.top.ModifyViewModel" />
    </data>

    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/b_g">

        <com.google.android.material.appbar.AppBarLayout
            android:id="@+id/appbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/b_g">

            <com.google.android.material.appbar.CollapsingToolbarLayout
                android:id="@+id/collapsingToolbar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_scrollFlags="scroll|exitUntilCollapsed">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:id="@+id/clTitleBar"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="40dp"
                    android:paddingStart="32dp"
                    android:paddingEnd="32dp"
                    android:paddingBottom="20dp">

                    <androidx.appcompat.widget.AppCompatTextView
                        android:id="@+id/tvTitle"
                        style="@style/AndH3GothicMediumLeft22Gray2"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/modify_title"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <androidx.appcompat.widget.AppCompatImageView
                        android:id="@+id/ivClose"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@drawable/delete_black"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                </androidx.constraintlayout.widget.ConstraintLayout>

            </com.google.android.material.appbar.CollapsingToolbarLayout>
        </com.google.android.material.appbar.AppBarLayout>


        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_behavior="@string/appbar_scrolling_view_behavior">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/clInfo"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:paddingTop="32dp"
                android:paddingStart="32dp"
                android:paddingEnd="32dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/tvNickname"
                    style="@style/AndH6GothicRegularLeft16Gray4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/add_nickname_title"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <androidx.appcompat.widget.AppCompatEditText
                    android:id="@+id/etNickname"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    style="@style/AndH2SerifBoldLeft24Gray1"
                    android:hint="Tory"
                    android:text="@={vm.nickname}"
                    android:singleLine="true"
                    android:layout_marginTop="12dp"
                    app:layout_constraintTop_toBottomOf="@id/tvNickname"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/tvPS"
                    style="@style/AndH7GothicRegularLeft14Gray4"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="7dp"
                    android:text="@string/add_nickname_ps"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/etNickname" />


                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/tvSettingTitle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    style="@style/AndH6GothicRegularLeft16Gray4"
                    android:text="@string/add_everyday_setting"
                    android:layout_marginTop="32dp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/tvPS" />

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/rvDatePicker"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="15dp"
                    android:clipToPadding="false"
                    app:layout_constraintTop_toBottomOf="@id/tvSettingTitle"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    />

                <androidx.constraintlayout.widget.Guideline
                    android:id="@+id/middle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    app:layout_constraintGuide_percent="0.5"
                    />

                <View
                    android:layout_width="0dp"
                    android:layout_height="0dp"
                    android:layout_marginEnd="23dp"
                    android:background="#bbf9f9f9"
                    app:layout_constraintTop_toTopOf="@id/rvDatePicker"
                    app:layout_constraintBottom_toBottomOf="@id/rvDatePicker"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="@id/middle"
                    />

                <View
                    android:layout_width="0dp"
                    android:layout_height="0dp"
                    android:layout_marginStart="23dp"
                    android:background="#bbf9f9f9"
                    app:layout_constraintTop_toTopOf="@id/rvDatePicker"
                    app:layout_constraintBottom_toBottomOf="@id/rvDatePicker"
                    app:layout_constraintStart_toStartOf="@id/middle"
                    app:layout_constraintEnd_toEndOf="parent"
                    />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/tvEveryDay"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    style="@style/AndH8GothicRegularCenter12Gray2"
                    android:gravity="center_horizontal"
                    android:layout_marginTop="3dp"
                    android:text="@string/add_every_day"
                    app:layout_constraintTop_toBottomOf="@id/rvDatePicker"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    />

            </androidx.constraintlayout.widget.ConstraintLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>


        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tvDone"
            style="@style/AndH5GothicRegularCenter18Gray5"
            android:layout_width="match_parent"
            android:layout_height="56dp"
            android:layout_marginStart="32dp"
            android:layout_marginEnd="32dp"
            android:layout_marginBottom="32dp"
            android:layout_gravity="bottom"
            android:gravity="center"
            android:text="@string/add_done"
            android:enabled="false"
            android:background="@drawable/selector_plant_card_done"
            android:textColor="@drawable/selector_plant_card_done_txt"
            android:onClick="@{() -> vm.onClickDone()}"
            />
    </androidx.coordinatorlayout.widget.CoordinatorLayout>
</layout>