<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/gray7"
    android:paddingStart="20dp"
    android:paddingEnd="20dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/clCalendar"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@drawable/pliary_home_card"
        android:layout_marginTop="20dp"
        android:padding="10dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        >

        <com.prolificinteractive.materialcalendarview.MaterialCalendarView
            android:id="@+id/calendarView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:layout_marginStart="12dp"
            android:layout_marginEnd="12dp"
            app:mcv_selectionMode="none"
            app:mcv_showOtherDates="defaults"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            />

        <View
            android:id="@+id/dashBorder"
            android:layout_width="0dp"
            android:layout_height="2dp"
            android:background="@drawable/dash_line"
            android:layout_marginTop="10dp"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            app:layout_constraintTop_toBottomOf="@id/calendarView"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            />

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/ivWatered"
            android:layout_width="13dp"
            android:layout_height="15dp"
            android:src="@drawable/green_drop"
            android:layout_marginEnd="5dp"
            app:layout_constraintTop_toTopOf="@id/tvWateredTitle"
            app:layout_constraintBottom_toBottomOf="@id/tvWateredTitle"
            app:layout_constraintEnd_toStartOf="@id/tvWateredTitle"
            />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tvWateredTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/AndH8GothicRegularCenter12Gray2"
            android:text="@string/calendar_watered"
            android:layout_marginTop="24dp"
            android:layout_marginBottom="24dp"
            app:layout_constraintTop_toBottomOf="@id/dashBorder"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toStartOf="@id/tvWateringTitle"
            app:layout_constraintBottom_toBottomOf="parent"
            />

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/ivWatering"
            android:layout_width="13dp"
            android:layout_height="15dp"
            android:src="@drawable/blue_drop"
            android:layout_marginEnd="5dp"
            app:layout_constraintTop_toTopOf="@id/tvWateringTitle"
            app:layout_constraintBottom_toBottomOf="@id/tvWateringTitle"
            app:layout_constraintEnd_toStartOf="@id/tvWateringTitle"
            />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tvWateringTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/AndH8GothicRegularCenter12Gray2"
            android:text="@string/calendar_watering"
            android:layout_marginTop="24dp"
            android:layout_marginBottom="24dp"
            app:layout_constraintTop_toBottomOf="@id/dashBorder"
            app:layout_constraintStart_toEndOf="@id/tvWateredTitle"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/clWatered"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@drawable/pliary_home_card"
        android:layout_marginTop="10dp"
        android:padding="10dp"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/clCalendar">

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/ivWateredDate"
            android:layout_width="13dp"
            android:layout_height="15dp"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="20dp"
            android:src="@drawable/green_drop"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tvWateredDate"
            style="@style/AndH6SerifBlackLeft16Gray1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="7dp"
            android:text="19.11.12"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="@id/ivWateredDate"
            app:layout_constraintStart_toEndOf="@id/ivWateredDate"
            app:layout_constraintTop_toTopOf="@id/ivWateredDate" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tvWateredMessage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/AndH7GothicRegularLeft14Gray3"
            android:text="@string/calendar_watered_message"
            android:layout_marginStart="18dp"
            app:layout_constraintTop_toTopOf="@id/tvWateredDate"
            app:layout_constraintBottom_toBottomOf="@id/tvWateredDate"
            app:layout_constraintStart_toEndOf="@id/tvWateredDate"
            />

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/ivMenu"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/vertical_dot_black"
            android:layout_marginEnd="10dp"
            app:layout_constraintTop_toTopOf="@id/tvWateredMessage"
            app:layout_constraintBottom_toBottomOf="@id/tvWateredMessage"
            app:layout_constraintEnd_toEndOf="parent"
            />

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.constraintlayout.widget.ConstraintLayout>