<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
        <variable
            name="vm"
            type="com.nexters.android.pliary.view.add.AddViewModel" />
    </data>

    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/b_g">

        <com.google.android.material.appbar.AppBarLayout
            android:id="@+id/appbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/b_g">

            <com.google.android.material.appbar.CollapsingToolbarLayout
                android:id="@+id/collapsingToolbar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_scrollFlags="scroll|exitUntilCollapsed">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:id="@+id/clTitleBar"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="40dp"
                    android:paddingStart="32dp"
                    android:paddingEnd="32dp"
                    android:paddingBottom="20dp">

                    <androidx.appcompat.widget.AppCompatTextView
                        android:id="@+id/tvTitle"
                        style="@style/AndH3GothicMediumLeft22Gray2"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/add_title"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <androidx.appcompat.widget.AppCompatImageView
                        android:id="@+id/ivClose"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@drawable/delete_black"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                </androidx.constraintlayout.widget.ConstraintLayout>

            </com.google.android.material.appbar.CollapsingToolbarLayout>
        </com.google.android.material.appbar.AppBarLayout>


        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_behavior="@string/appbar_scrolling_view_behavior">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:paddingTop="20dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/tvSelect"
                    style="@style/AndH6GothicRegularLeft16Gray4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="32dp"
                    android:text="@string/add_select_species"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <androidx.appcompat.widget.AppCompatSpinner
                    android:id="@+id/spSelectPlant"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="32dp"
                    android:layout_marginTop="11dp"
                    android:layout_marginEnd="32dp"
                    android:entries="@array/array_plant"
                    style="@style/AndH2SerifBoldLeft24Gray6"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/tvSelect" />


                <androidx.core.widget.NestedScrollView
                    android:id="@+id/scrollView"
                    android:layout_width="0dp"
                    android:layout_height="0dp"
                    android:layout_marginTop="13dp"
                    android:clipToPadding="false"
                    android:visibility="gone"
                    app:layout_behavior="@string/appbar_scrolling_view_behavior"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/spSelectPlant"
                    app:layout_constraintBottom_toBottomOf="parent">

                    <androidx.constraintlayout.widget.ConstraintLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:paddingBottom="16dp">

                        <include
                            android:id="@+id/firstSection"
                            layout="@layout/add_first_layout"
                            app:vm="@{vm}"
                            />

                        <View
                            android:id="@+id/border1"
                            android:layout_width="0dp"
                            android:layout_height="1dp"
                            android:background="#e8e8e8"
                            android:layout_marginTop="32dp"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toBottomOf="@id/firstSection" />

                        <View
                            android:id="@+id/border8"
                            android:layout_width="0dp"
                            android:layout_height="8dp"
                            android:background="#f5f5f5"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toBottomOf="@id/border1" />

                        <androidx.constraintlayout.widget.ConstraintLayout
                            android:id="@+id/secondSection"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            app:layout_constraintTop_toBottomOf="@id/border8"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintEnd_toEndOf="parent"
                            >

                            <include
                                android:id="@+id/secondLayout"
                                layout="@layout/add_second_layout"
                                app:vm="@{vm}"
                                />

                        </androidx.constraintlayout.widget.ConstraintLayout>

                        <androidx.appcompat.widget.AppCompatTextView
                            android:id="@+id/tvDone"
                            style="@style/AndH5GothicRegularCenter18Gray5"
                            android:layout_width="0dp"
                            android:layout_height="56dp"
                            android:layout_marginStart="32dp"
                            android:layout_marginEnd="32dp"
                            android:gravity="center"
                            android:text="@string/add_done"
                            android:enabled="false"
                            android:background="@drawable/selector_plant_card_done"
                            android:textColor="@drawable/selector_plant_card_done_txt"
                            android:onClick="@{() -> vm.onClickDone()}"
                            app:layout_constraintVertical_bias="0.9"
                            app:layout_constraintTop_toBottomOf="@id/secondSection"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintStart_toStartOf="parent" />
                    </androidx.constraintlayout.widget.ConstraintLayout>
                </androidx.core.widget.NestedScrollView>

                <!--<androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/rvPlant"
                    android:layout_width="0dp"
                    android:layout_height="0dp"
                    android:layout_marginTop="13dp"
                    android:clipToPadding="false"
                    app:layout_behavior="@string/appbar_scrolling_view_behavior"
                    app:layout_constraintTop_toBottomOf="@id/spSelectPlant"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"
                    />-->

            </androidx.constraintlayout.widget.ConstraintLayout>
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.coordinatorlayout.widget.CoordinatorLayout>
</layout>